# cpp_eval_keras

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  test.cc
KerascppCpu/: CMakeLists.txt
KerascppCpu/src/: activation.cc  lstm.cc  model.cc
MLKerasCppCpuDeployLib/: CMakeLists.txt
MLKerasCppCpuDeployLib/src/: tensor.cc
data/: memory_predictor_PCG_mean.txt  memory_predictor_PCG_normal.txt  memory_predictor_modal_mean.txt  memory_predictor_modal_normal.txt  memory_predictor_sparse_mean.txt  memory_predictor_sparse_normal.txt  time_sparse_mean.txt  time_sparse_scale.txt  time_sparse_test_ground_truth.npy
models/: memory_predictor_PCG_solver.model  memory_predictor_modal_solver.model  memory_predictor_sparse_solver.model  time_predictor.model
